[package]
name = "moon"
version = "0.1.0"
authors = [""]
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib" ]

[[bin]]
name = "rid_build"
path = "rid_build.rs"

[dependencies]
derive_more = "0.99.17"
cbindgen = "0.20.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
uuid = { version = "0.8", features = ["v4"] }
async-trait = "0.1.51"
futures = "0.3"
dashmap = "5.2.0"
tiny-bip39 = "0.8.2"
chrono = "0.4.19"
openssl = { version = "0.10", features = ["vendored"] }
allo-isolate = "0.1.12"

rid = { git = "ssh://git@github.com/space-operator/rid.git" }
rid_build = { git = "ssh://git@github.com/space-operator/rid.git"}

sunshine_indra = { git="ssh://git@github.com/space-operator/sunshine_flow.git" }
sunshine_core = { git="ssh://git@github.com/space-operator/sunshine_flow.git" }
sunshine_solana = { git="ssh://git@github.com/space-operator/sunshine_flow.git" }

input-core ={ git = "ssh://git@github.com/space-operator/sunshine.git" }
input-more ={git = "ssh://git@github.com/space-operator/sunshine.git"}

parse ={git = "ssh://git@github.com/space-operator/sunshine.git"}
